cleanup: backend changes