@@ -3,7 +3,6 @@ package com.codetracker.codetracker_backend.dto;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import com.codetracker.codetracker_backend.entity.Topic;
 import com.codetracker.codetracker_backend.entity.UserProgress;
@@ -22,7 +21,7 @@ public record TopicWithProgressDto(
                 topic.getProblems() != null
                         ? topic.getProblems().stream()
                         .map(problem -> ProblemWithProgressDto.toDto(problem, progressMap))
-                        .collect(Collectors.toList())
+                        .toList()
                         : null
         );
     }
